--- a/FuscaZul/app/front/templates/cad.html
+++ b/FuscaZul/app/front/templates/cad.html
@@ -31,7 +31,7 @@
 		
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 		<script src ="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-		<script>
+		<script>/*
 			var app = new vue ({
 				el: "#form",
 				delimiters: ['{[',']}'],
@@ -54,7 +54,7 @@
 						.catch(error => alert(error))
 					}
 				}
-			})
+			})*/
 		</script>
 	</body>
 </html>
